--- a/01-intro/homework.ipynb
+++ b/01-intro/homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "58ab0f48-10fd-48d4-a558-81669da59d97",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f8b9dc76-8642-4098-9114-4c9a7c9106ed",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c3b25dec-97af-43e4-b770-1c787a7c5ff3",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5c07371e",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "Length: 3066766, dtype: timedelta64[us]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "e10118ed",
    "metadata": {},
    "outputs": [],
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "1cdc11d1",
    "metadata": {},
    "outputs": [
@@ -1467,7 +1467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "60c756af",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1574,7 @@
        "[3009173 rows x 2 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7435c95e",
    "metadata": {},
    "outputs": [
@@ -1617,13 +1617,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_35459/2116944412.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10985/2116944412.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_jan_2023_y_filtered['PULocationID'] = df_jan_2023_y_filtered['PULocationID'].astype(str)\n",
-      "/tmp/ipykernel_35459/2116944412.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_10985/2116944412.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1643,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9b8e0d79",
    "metadata": {},
    "outputs": [
@@ -1653,7 +1653,7 @@
        "dtype('O')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1665,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "7615abda",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1677,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "aabc355d",
    "metadata": {},
    "outputs": [],
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "bc9ea728",
    "metadata": {},
    "outputs": [
@@ -1838,7 +1838,7 @@
        "9          141          107"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1849,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "a5527ac8",
    "metadata": {},
    "outputs": [
@@ -1868,7 +1868,7 @@
        " {'PULocationID': '141', 'DOLocationID': '107'}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1879,7 +1879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "40bcd0f6",
    "metadata": {},
    "outputs": [],
@@ -1889,7 +1889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "52be7fc4",
    "metadata": {},
    "outputs": [],
@@ -1900,7 +1900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "72b5bd80",
    "metadata": {},
    "outputs": [
@@ -2424,7 +2424,7 @@
        " 'PULocationID=98']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2435,7 +2435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "25d0a956",
    "metadata": {},
    "outputs": [
@@ -2446,7 +2446,7 @@
        "\twith 6018346 stored elements and shape (3009173, 515)>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "d24711b6",
    "metadata": {},
    "outputs": [],
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "382ad109",
    "metadata": {},
    "outputs": [
@@ -2503,7 +2503,7 @@
        "       13.        , 14.4       ], shape=(3009173,))"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2514,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "62be0ccb",
    "metadata": {},
    "outputs": [],
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "id": "6e447fb3",
    "metadata": {},
    "outputs": [
@@ -2952,7 +2952,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2964,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "3e45549e",
    "metadata": {},
    "outputs": [],
@@ -3035,7 +3035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "c33752ed",
    "metadata": {},
    "outputs": [
@@ -3058,11 +3058,364 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "66b1e92d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Q6. Evaluating the model\n",
+    "#Now let's apply this model to the validation dataset (February 2023).\n",
+    "#What's the RMSE on validation?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aeac491b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_val = pd.read_parquet('https://d37ci6vzurychx.cloudfront.net/trip-data/yellow_tripdata_2023-02.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ead420a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VendorID</th>\n",
+       "      <th>tpep_pickup_datetime</th>\n",
+       "      <th>tpep_dropoff_datetime</th>\n",
+       "      <th>passenger_count</th>\n",
+       "      <th>trip_distance</th>\n",
+       "      <th>RatecodeID</th>\n",
+       "      <th>store_and_fwd_flag</th>\n",
+       "      <th>PULocationID</th>\n",
+       "      <th>DOLocationID</th>\n",
+       "      <th>payment_type</th>\n",
+       "      <th>fare_amount</th>\n",
+       "      <th>extra</th>\n",
+       "      <th>mta_tax</th>\n",
+       "      <th>tip_amount</th>\n",
+       "      <th>tolls_amount</th>\n",
+       "      <th>improvement_surcharge</th>\n",
+       "      <th>total_amount</th>\n",
+       "      <th>congestion_surcharge</th>\n",
+       "      <th>Airport_fee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:32:53</td>\n",
+       "      <td>2023-02-01 00:34:34</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>142</td>\n",
+       "      <td>163</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.40</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-02-01 00:35:16</td>\n",
+       "      <td>2023-02-01 00:35:30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>71</td>\n",
+       "      <td>71</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-5.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-02-01 00:35:16</td>\n",
+       "      <td>2023-02-01 00:35:30</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>71</td>\n",
+       "      <td>71</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2023-02-01 00:29:33</td>\n",
+       "      <td>2023-02-01 01:01:38</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.80</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>132</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "      <td>70.9</td>\n",
+       "      <td>2.25</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>74.65</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2023-02-01 00:12:28</td>\n",
+       "      <td>2023-02-01 00:25:46</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.22</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>161</td>\n",
+       "      <td>145</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>25.30</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   VendorID tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\n",
+       "0         1  2023-02-01 00:32:53   2023-02-01 00:34:34              2.0   \n",
+       "1         2  2023-02-01 00:35:16   2023-02-01 00:35:30              1.0   \n",
+       "2         2  2023-02-01 00:35:16   2023-02-01 00:35:30              1.0   \n",
+       "3         1  2023-02-01 00:29:33   2023-02-01 01:01:38              0.0   \n",
+       "4         2  2023-02-01 00:12:28   2023-02-01 00:25:46              1.0   \n",
+       "\n",
+       "   trip_distance  RatecodeID store_and_fwd_flag  PULocationID  DOLocationID  \\\n",
+       "0           0.30         1.0                  N           142           163   \n",
+       "1           0.00         1.0                  N            71            71   \n",
+       "2           0.00         1.0                  N            71            71   \n",
+       "3          18.80         1.0                  N           132            26   \n",
+       "4           3.22         1.0                  N           161           145   \n",
+       "\n",
+       "   payment_type  fare_amount  extra  mta_tax  tip_amount  tolls_amount  \\\n",
+       "0             2          4.4   3.50      0.5         0.0           0.0   \n",
+       "1             4         -3.0  -1.00     -0.5         0.0           0.0   \n",
+       "2             4          3.0   1.00      0.5         0.0           0.0   \n",
+       "3             1         70.9   2.25      0.5         0.0           0.0   \n",
+       "4             1         17.0   1.00      0.5         3.3           0.0   \n",
+       "\n",
+       "   improvement_surcharge  total_amount  congestion_surcharge  Airport_fee  \n",
+       "0                    1.0          9.40                   2.5         0.00  \n",
+       "1                   -1.0         -5.50                   0.0         0.00  \n",
+       "2                    1.0          5.50                   0.0         0.00  \n",
+       "3                    1.0         74.65                   0.0         1.25  \n",
+       "4                    1.0         25.30                   2.5         0.00  "
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "0f1345a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         0 days 00:01:41\n",
+       "1         0 days 00:00:14\n",
+       "2         0 days 00:00:14\n",
+       "3         0 days 00:32:05\n",
+       "4         0 days 00:13:18\n",
+       "                ...      \n",
+       "2913950   0 days 00:19:00\n",
+       "2913951   0 days 00:11:08\n",
+       "2913952   0 days 00:14:00\n",
+       "2913953   0 days 00:07:00\n",
+       "2913954   0 days 00:09:48\n",
+       "Length: 2913955, dtype: timedelta64[us]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_val.tpep_dropoff_datetime = pd.to_datetime(df_val.tpep_dropoff_datetime)                        \n",
+    "df_val.tpep_pickup_datetime = pd.to_datetime(df_val.tpep_pickup_datetime)     \n",
+    "#the difference   \n",
+    "df_val.tpep_dropoff_datetime - df_val.tpep_pickup_datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "7e129a16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_val['duration'] = df_val.tpep_dropoff_datetime - df_val.tpep_pickup_datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "65e39f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "#calculates the duration in minutes\n",
+    "df_val.duration = df_val.duration.apply(lambda td: td.total_seconds() / 60)\n",
+    "#display\n",
+    "df_val.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ebcae6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keep only durations between 1 and 60 minutes\n",
+    "df_val_filtered = df_val[(df_val['duration'] >= 1) & (df_val['duration'] <= 60)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6eece1bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recast PULocationID and DOLocationID to string\n",
+    "df_val_filtered['PULocationID'] = df_val_filtered['PULocationID'].astype(str)\n",
+    "df_val_filtered['DOLocationID'] = df_val_filtered['DOLocationID'].astype(str)\n",
+    "\n",
+    "# Select only the pickup and dropoff columns\n",
+    "df_features = df_val_filtered[['PULocationID', 'DOLocationID']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "212ed54f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_dicts = df_val_filtered[categorical].to_dict(orient='records')\n",
+    "X_val = dv.transform(val_dicts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09d4aff3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_val = df_val[target].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "749f933d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = lr.predict(X_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf006986",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_squared_error(y_val, y_pred, squared=False)"
+   ]
   }
  ],
  "metadata": {
